--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Rebecca Stone blog
 email: ysbecca@gmail.com
+author: Rebecca Stone
 description: > # this means to ignore newlines until "baseurl:"
   Life, thoughts, and experiences as a post-graduate student in computer science at the University of Leeds. 
 baseurl: "" # the subpath of your site, e.g. /blog
